finished login/logout handling

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -53,3 +53,7 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+springSecurity.errors.login.fail=Sorry, we were not able to find a user with that email address and password
+springSecurity.errors.login.disabled=Login failed because your account is currently disabled
+springSecurity.errors.login.success=Welcome {0}, you are now logged in
