can now add users

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -57,3 +57,8 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 springSecurity.errors.login.fail=Sorry, we were not able to find a user with that email address and password
 springSecurity.errors.login.disabled=Login failed because your account is currently disabled
 springSecurity.errors.login.success=Welcome {0}, you are now logged in
+
+register.subject=Airport Management Toolbox Registration
+register.success=An registration email has been sent to {0}
+register.fail=Failed to add user with email address {0}
+
