added form validation styles

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -60,5 +60,10 @@ springSecurity.errors.login.success=Welcome {0}, you are now logged in
 
 register.subject=Airport Management Toolbox Registration
 register.success=An registration email has been sent to {0}
-register.fail=Failed to add user with email address {0}
+register.fail=Failed to add user.
+
+user.username.blank=Email cannot be blank
+user.username.nullable=Email cannot be blank
+user.username.email.invalid=Not a valid email address
+user.username.unique=This email address is already registered
 
