improve transaction and error handling

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -60,7 +60,8 @@ springSecurity.errors.login.success=Welcome {0}, you are now logged in
 
 register.subject=Airport Management Toolbox Registration
 register.success=An registration email has been sent to {0}
-register.fail=Failed to add user.
+register.fail.invalid=Failed to add user due to invalid address: {0}
+register.fail=An error occurred while trying to add user {0}
 
 user.username.blank=Email cannot be blank
 user.username.nullable=Email cannot be blank
