completed the user management UI

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -19,7 +19,7 @@ default.paginate.prev=Previous
 default.paginate.next=Next
 default.boolean.true=True
 default.boolean.false=False
-default.date.format=yyyy-MM-dd HH:mm:ss z
+default.date.format=yyyy-MM-dd
 default.number.format=0
 
 default.created.message={0} {1} created
@@ -67,4 +67,8 @@ user.username.blank=Email cannot be blank
 user.username.nullable=Email cannot be blank
 user.username.email.invalid=Not a valid email address
 user.username.unique=This email address is already registered
-
+user.delete.confirm=Are you sure you want to permanently delete this user?
+user.resendInvite.confirm=Click OK to reset the password and send the invitation email again.
+user.invite.resent=Another invitation email has been sent to {0}
+user.deleted=User {0} has been deleted
+user.enabled.toggle=User {0} is now {1}
