--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,8 +1,8 @@
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
-default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
+default.invalid.url.message=Not a valid URL
 default.invalid.creditCard.message=Property [{0}] of class [{1}] with value [{2}] is not a valid credit card number
-default.invalid.email.message=Property [{0}] of class [{1}] with value [{2}] is not a valid e-mail address
-default.invalid.range.message=Property [{0}] of class [{1}] with value [{2}] does not fall within the valid range from [{3}] to [{4}]
+default.invalid.email.message=Not a valid e-mail address
+default.invalid.range.message=value does not fall within the valid range from {3} to {4}
 default.invalid.size.message=Property [{0}] of class [{1}] with value [{2}] does not fall within the valid size range from [{3}] to [{4}]
 default.invalid.max.message=Property [{0}] of class [{1}] with value [{2}] exceeds maximum value [{3}]
 default.invalid.min.message=Property [{0}] of class [{1}] with value [{2}] is less than minimum value [{3}]
@@ -10,9 +10,9 @@ default.invalid.max.size.message=Property [{0}] of class [{1}] with value [{2}] 
 default.invalid.min.size.message=Property [{0}] of class [{1}] with value [{2}] is less than the minimum size of [{3}]
 default.invalid.validator.message=Property [{0}] of class [{1}] with value [{2}] does not pass custom validation
 default.not.inlist.message=Property [{0}] of class [{1}] with value [{2}] is not contained within the list [{3}]
-default.blank.message=Property [{0}] of class [{1}] cannot be blank
+default.blank.message=field cannot be blank
 default.not.equal.message=Property [{0}] of class [{1}] with value [{2}] cannot equal [{3}]
-default.null.message=Property [{0}] of class [{1}] cannot be null
+default.null.message=field cannot be blank
 default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must be unique
 
 default.paginate.prev=Previous
@@ -72,3 +72,7 @@ user.resendInvite.confirm=Click OK to reset the password and send the invitation
 user.invite.resent=Another invitation email has been sent to {0}
 user.deleted=User {0} has been deleted
 user.enabled.toggle=User {0} is now {1}
+
+changePasswordCommand.currentPassword.validator.error=The current password was incorrect
+changePasswordCommand.newPassword.validator.error=The password and password confirmation did not match
+passwordChange.success=Your password has been changed
