added password recovery

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -76,3 +76,13 @@ user.enabled.toggle=User {0} is now {1}
 changePasswordCommand.currentPassword.validator.error=The current password was incorrect
 changePasswordCommand.newPassword.validator.error=The password and password confirmation did not match
 passwordChange.success=Your password has been changed
+
+email.subject.passwordReset=Airport Management Toolbox Password Reset
+forgotPassword.email=A password reset email was sent to {0}. To complete the process please follow the instructions therein.
+forgotPasswordCommand.username.validator.error=A user with this email address does not exist
+forgotPassword.error=Failed to send password reset email
+
+resetPassword.change.error=The new password and password confirmation did not match or were blank. Please try again.
+resetPassword.success=Your password has been successfully changed. You are now logged-in.
+resetPassword.badCode=Invalid token. You must click the link sent by email or start the password reset process again from the beginning.
+
