made checkboxes configurable per section

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -86,3 +86,7 @@ resetPassword.change.error=The new password and password confirmation did not ma
 resetPassword.success=Your password has been successfully changed. You are now logged-in.
 resetPassword.badCode=Invalid token. You must click the link sent by email or start the password reset process again from the beginning.
 
+error.forbidden=You are not authorised to access the requested URL
+error.notFound=The page you requested could not be found
+error.serverError=An error occurred while processing your request
+
