changes to email wording and sender

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -58,7 +58,7 @@ springSecurity.errors.login.fail=Sorry, we were not able to find a user with tha
 springSecurity.errors.login.disabled=Login failed because your account is currently disabled
 springSecurity.errors.login.success=Welcome {0}, you are now logged in
 
-register.subject=Airport Management Toolbox Registration
+register.subject=Airport Marketing Toolbox Registration
 register.success=An registration email has been sent to {0}
 register.fail.invalid=Failed to add user due to invalid address: {0}
 register.fail=An error occurred while trying to add user {0}
@@ -77,7 +77,7 @@ changePasswordCommand.currentPassword.validator.error=The current password was i
 changePasswordCommand.newPassword.validator.error=The password and password confirmation did not match
 passwordChange.success=Your password has been changed
 
-email.subject.passwordReset=Airport Management Toolbox Password Reset
+email.subject.passwordReset=Airport Marketing Toolbox Password Reset
 forgotPassword.email=A password reset email was sent to {0}. To complete the process please follow the instructions therein.
 forgotPasswordCommand.username.validator.error=A user with this email address does not exist
 forgotPassword.error=Failed to send password reset email
